<resources>
    <string name="app_name">Study Kotlin</string>
    <string name="open_box">Open Box</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="about_the_application">About the application</string>
    <string name="application_name">Application Name:</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="ok">Ok</string>
    <string name="activity_navigation_example">Activity Navigation Example</string>
    <string name="_1_0">1.0</string>
    <string name="_1">1</string>
    <string name="select_the_number_of_boxes">Select the number of boxes:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enable_timer">Enable timer</string>
    <string name="congratulations">Congratulations!</string>
    <string name="to_main_menu">To Main Menu</string>
    <string name="surprise_box">Surprise box</string>
    <string name="box_title">Box #%1$d</string>
    <string name="empty_box">This box is empty. Try another one.</string>
    <string name="please_select_a_box">Please select a box:</string>
    <string name="timer_value">Timer: %1$d sec.</string>
    <string name="the_end">The end</string>
    <string name="timer_end_message">Oops, there is no enough time, try again later.</string>
</resources>